统一异常处理

--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,13 @@
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+			<version>1.2.31</version>
+		</dependency>
 		<dependency>
 			<groupId>com.growithus.service.itf</groupId>
 			<artifactId>web-service-i</artifactId>
